# spotify-qrcode-extractor

./: .gitignore  LICENSE  README.md  config.template.toml  main.py  pyproject.toml
.github/workflows/: build.yml
