[project]
name = "spotify-qrcode-extractor"
version = "1.0.0"
description = "A CLI (Command Line Interface) app which allows users to generate QR-Codes by providing a spotify playlist URL."
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "pillow>=11.3.0",
    "pyinstaller>=6.16.0",
    "qrcode>=8.2",
    "spotipy>=2.25.1",
]
